--- a/authentication/authentication-keys-generator/pom.xml
+++ b/authentication/authentication-keys-generator/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <groupId>io.mosip.authentication.tool</groupId>
   <artifactId>authentication-keys-generator</artifactId>
-  <version>1.0.9-SNAPSHOT</version>
+  <version>1.0.9-rc1</version>
   <dependencies>
   	<dependency>
   		<groupId>org.projectlombok</groupId>
