--- a/docker/biosdk/tech5/Dockerfile-authentication-service-tech5-softhsmclient
+++ b/docker/biosdk/tech5/Dockerfile-authentication-service-tech5-softhsmclient
@@ -1,4 +1,4 @@
-FROM docker-registry.mosip.io:5000/tech5-java8-base:1.0
+FROM tech5-java8-base:0.9
 
 #Uncomment below and Comment above line(i.e. FROM openjdk:8) for OS specific (e.g. Alpine OS ) docker base image
 #FROM openjdk:8-jdk-alpine
@@ -62,11 +62,8 @@ ADD target/${current_module_env}-*.jar ./opt/Tech5/${current_module_env}.jar
 #RUN unzip so-files.zip
 #RUN rm -rf so-files.zip
 
-RUN yum install -y wget unzip
 
 ENV LD_LIBRARY_PATH=$PATH:/opt/Tech5/nativeDocker
-
-ENV loader_path_env=commons-codec-1.9.jar,t5-finger-iris-mosip-auth-v1.2.jar,ABISTech5FaceSDKAdapter_v1.5.jar,tech5-sdk-docker-v1.0.jar
 
 EXPOSE 8090
 
@@ -83,9 +80,9 @@ CMD if [ "$is_glowroot_env" = "present" ]; then \
     unzip glowroot.zip ; \
     rm -rf glowroot.zip ; \
     sed -i 's/<service_name>/${current_module_env}/g' glowroot/glowroot.properties ; \
-    cd /opt/Tech5; java -jar -Djava.security.debug=sunpkcs11 -javaagent:glowroot/glowroot.jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path=commons-codec-1.9.jar,t5-finger-iris-mosip-auth-v1.2.jar,ABISTech5FaceSDKAdapter_v1.5.jar,tech5-sdk-docker-v1.0.jar ${current_module_env}.jar ; \
+    cd /opt/Tech5; java -jar -Djava.security.debug=sunpkcs11 -javaagent:glowroot/glowroot.jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path=${loader_path_env} -Dfile.encoding="UTF-8" ${current_module_env}.jar ; \
     else \
-    cd /opt/Tech5; java -jar -Djava.security.debug=sunpkcs11 -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" "-Dloader.path=commons-codec-1.9.jar,t5-finger-iris-mosip-auth-v1.2.jar,ABISTech5FaceSDKAdapter_v1.5.jar,tech5-sdk-docker-v1.0.jar" /opt/Tech5/${current_module_env}.jar ; \
+    cd /opt/Tech5; java -jar -Djava.security.debug=sunpkcs11 -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" "-Dloader.path=${loader_path_env}" -Dfile.encoding="UTF-8" ${current_module_env}.jar ; \
     fi
-#CMD ["java", "-Dloader.path=/tech5-sdk-v1.5.1.jar,/ABISTech5FaceSDKAdapter_v2.jar,/t5-finger-iris-mosip-auth-v1.2.jar", "-jar","-Dspring.cloud.config.label=${spring_config_label_env}","-Dspring.profiles.active=${active_profile_env}","-Dspring.cloud.config.uri=${spring_config_url_env}", "-Dloader.path=${loader_path_env}", "/opt/Tech5/${current_module_env}.jar"]
+
 
