--- a/docker/biosdk/tech5/Dockerfile-tech5-java8-base
+++ b/docker/biosdk/tech5/Dockerfile-tech5-java8-base
@@ -12,15 +12,13 @@ RUN yum install -y libpng12
 
 
 #Adding directory to specified path
-ADD AuthSDK-Docker_27thFeb2020.tar ./opt/Tech5
+ADD AuthSDK-Docker_29thJune2020.tar ./opt/Tech5
 ADD commons-codec-1.9.jar ./opt/Tech5
-ADD kernel-cbeffutil-api-0.12.18.jar ./opt/Tech5
-ADD kernel-core-0.12.18.jar ./opt/Tech5
 ADD t5-finger-iris-mosip-auth-v1.2.jar ./opt/Tech5
 ADD ABISTech5FaceSDKAdapter_v1.5.jar ./opt/Tech5
+ADD kernel-biometrics-api-0.9-20200615.083530-76.jar ./opt/Tech5
 ADD face_sdk_1_5_mosip.tar ./faceSdk
 ADD face_sdk.lic ./usr/share/face_sdk/
-
 
 
 #running local yum on rpm : try code
@@ -37,3 +35,7 @@ ENV LD_LIBRARY_PATH=$PATH:/opt/Tech5/nativeDocker
 
 RUN yum install -y wget unzip
 
+ADD config.properties ./opt/Tech5
+ADD tech5-sdk-prod-20200627.jar ./opt/Tech5
+
+ENV loader_path_env=commons-codec-1.9.jar,t5-finger-iris-mosip-auth-v1.2.jar,ABISTech5FaceSDKAdapter_v1.5.jar,tech5-sdk-prod-20200627.jar
