--- a/authentication/authentication-internal-service/Dockerfile-centos7_based
+++ b/authentication/authentication-internal-service/Dockerfile-centos7_based
@@ -36,9 +36,11 @@ ENV is_glowroot_env=${is_glowroot}
 # environment variable to pass artifactory url, at docker runtime
 ENV artifactory_url_env=${artifactory_url}
 
+ENV bio_sdk_folder_env=${bio_sdk_folder}
+
 ENV work_dir_env=/
 
-ENV current_module_env=authentication-service
+ENV current_module_env=authentication-internal-service
 
 ADD configure_start.sh configure_start.sh
 
@@ -46,7 +48,7 @@ RUN chmod +x configure_start.sh
 
 ADD target/${current_module_env}-*.jar ${current_module_env}.jar
 
-EXPOSE 8090
+EXPOSE 8093
 
 EXPOSE 9010
 
@@ -62,3 +64,6 @@ CMD if [ "$is_glowroot_env" = "present" ]; then \
     else \
     java -jar -Djava.security.debug=sunpkcs11 -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path="${loader_path_env}" -Dfile.encoding="UTF-8" ${current_module_env}.jar ; \
     fi
+
+#Sample docker run command:
+# sudo docker run --rm -it -e artifactory_url_env="http://artifactory" -e spring_config_label_env="1.0.9" -e active_profile_env="dev" -e spring_config_url_env="http://config-server/config" -e PKCS11_PROXY_SOCKET=tcp://softhsm-ida:5666 -e bio_sdk_folder_env="mock/0.9" -p 8093:8093 authentication-internal-service:1.0.9
