--- a/authentication/authentication-service/Dockerfile-softhsm_based
+++ b/authentication/authentication-service/Dockerfile-softhsm_based
@@ -33,7 +33,7 @@ ENV is_glowroot_env=${is_glowroot}
 # environment variable to pass artifactory url, at docker runtime
 ENV artifactory_url_env=${artifactory_url}
 
-ENV current_module_env=authentication-kyc-service
+ENV current_module_env=authentication-service
 
 WORKDIR /
 
@@ -55,7 +55,7 @@ ADD target/${current_module_env}-*.jar ${current_module_env}.jar
 #RUN unzip so-files.zip
 #RUN rm -rf so-files.zip
 
-EXPOSE 8091
+EXPOSE 8090
 
 EXPOSE 9010
 
@@ -75,5 +75,5 @@ CMD if [ "$is_glowroot_env" = "present" ]; then \
     fi
 #CMD ["java", "-Dloader.path=/tech5-sdk-v1.5.1.jar,/ABISTech5FaceSDKAdapter_v2.jar,/t5-finger-iris-mosip-auth-v1.2.jar", "-jar","-Dspring.cloud.config.label=${spring_config_label_env}","-Dspring.profiles.active=${active_profile_env}","-Dspring.cloud.config.uri=${spring_config_url_env}", "/${current_module_env}.jar"]
 
-# Example Docker run command for authentication-kyc-service-softhsm:1.0.9-SNAPSHOT
-# sudo docker run --rm -d -e artifactory_url_env="http://13.71.87.138:8040" -e spring_config_label_env="1.0.9" -e active_profile_env="dev" -e spring_config_url_env="http://104.211.212.28:51000" -p 8090:8090 -v /softhsm:/softhsm/var/lib/softhsm/ authentication-kyc-service-softhsm:1.0.9-SNAPSHOT
+# Example Docker run command:
+# sudo docker run --rm -d -e artifactory_url_env="http://artifactory" -e spring_config_label_env="1.0.9" -e active_profile_env="dev" -e spring_config_url_env="http://config-server/config -p 8090:8090 -v /softhsm:/softhsm/var/lib/softhsm/ authentication-service-softhsm:1.0.9
