--- a/authentication/authentication-keys-generator/pom.xml
+++ b/authentication/authentication-keys-generator/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <artifactId>authentication-keys-generator</artifactId>
   <version>1.0.9-rc1</version>
-
+  
   <dependencies>
   	<dependency>
   		<groupId>org.projectlombok</groupId>
@@ -27,7 +27,7 @@
   			<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
-			<version>2.0.0.RELEASE</version>
+			<version>${spring-cloud-config.version}</version>
 		</dependency>				
   	<dependency>
   		<groupId>org.postgresql</groupId>
@@ -36,24 +36,24 @@
   	</dependency>
   </dependencies>
   <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>2.0.2.RELEASE</version>
-        <configuration>
-          <executable>true</executable>
-          <layout>ZIP</layout>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>build-info</goal>
-              <goal>repackage</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring.boot.version}</version>
+				<configuration>
+					<executable>true</executable>
+					<layout>ZIP</layout>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>build-info</goal>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
