--- a/authentication/authentication-service/Dockerfile-centos7_based
+++ b/authentication/authentication-service/Dockerfile-centos7_based
@@ -12,6 +12,10 @@ ARG active_profile
 # can be passed during Docker build as build time environment for config server URL 
 ARG spring_config_url
 
+ARG bio_sdk_folder=mock/0.9
+
+ARG softhsm_client_zip=client-centos.zip
+
 # can be passed during Docker build as build time environment for glowroot 
 ARG is_glowroot
 
@@ -37,6 +41,8 @@ ENV is_glowroot_env=${is_glowroot}
 ENV artifactory_url_env=${artifactory_url}
 
 ENV bio_sdk_folder_env=${bio_sdk_folder}
+
+ENV softhsm_client_zip_env=${softhsm_client_zip}
 
 ENV work_dir_env=/
 
@@ -66,4 +72,4 @@ CMD if [ "$is_glowroot_env" = "present" ]; then \
     fi
 
 #Sample docker run command:
-# sudo docker run --rm -it -e artifactory_url_env="http://artifactory" -e spring_config_label_env="1.0.9" -e active_profile_env="dev" -e spring_config_url_env="http://config-server/config" -e PKCS11_PROXY_SOCKET=tcp://softhsm-ida:5666 -e bio_sdk_folder_env="mock/0.9" -p 8090:8090 authentication-service:1.0.9
+# sudo docker run --rm -it -e artifactory_url_env="http://artifactory" -e spring_config_label_env="1.0.9" -e active_profile_env="dev" -e spring_config_url_env="http://config-server/config" -e PKCS11_PROXY_SOCKET=tcp://softhsm-ida:5666 -p 8090:8090 authentication-service:1.0.9
