--- a/authentication/authentication-keys-generator/Dockerfile
+++ b/authentication/authentication-keys-generator/Dockerfile
@@ -9,6 +9,7 @@ ARG active_profile
 # can be passed during Docker build as build time environment for config server URL 
 ARG spring_config_url
 
+ARG softhsm_client_zip=client.zip
 # can be passed during Docker build as build time environment for artifactory URL
 ARG artifactory_url
 
@@ -24,12 +25,18 @@ ENV spring_config_url_env=${spring_config_url}
 # environment variable to pass artifactory url, at docker runtime
 ENV artifactory_url_env=${artifactory_url}
 
+ENV softhsm_client_zip_env=${softhsm_client_zip}
+
+ENV work_dir_env=/
+
+ENV current_module_env=authentication-keys-generator
+
 ADD configure_start.sh configure_start.sh
 
 RUN chmod +x configure_start.sh
 
-ADD target/authentication-keys-generator-*.jar authentication-keys-generator.jar
+ADD target/${current_module_env}-*.jar ${current_module_env}.jar
 
 ENTRYPOINT [ "/configure_start.sh" ]
 
-CMD ["java","-jar","-Dspring.cloud.config.label=${spring_config_label_env}","-Dspring.profiles.active=${active_profile_env}","-Dspring.cloud.config.uri=${spring_config_url_env}","/authentication-keys-generator.jar"]
+CMD ["java","-jar","-Dspring.cloud.config.label=${spring_config_label_env}","-Dspring.profiles.active=${active_profile_env}","-Dspring.cloud.config.uri=${spring_config_url_env}","${current_module_env}.jar"]
