--- a/docker/biosdk/tech5/Dockerfile-authentication-internal-service-tech5-softhsmclient
+++ b/docker/biosdk/tech5/Dockerfile-authentication-internal-service-tech5-softhsmclient
@@ -1,4 +1,4 @@
-FROM tech5-java8-base:0.9
+FROM docker-registry.mosip.io:5000/tech5-java8-base:0.9
 
 #Uncomment below and Comment above line(i.e. FROM openjdk:8) for OS specific (e.g. Alpine OS ) docker base image
 #FROM openjdk:8-jdk-alpine
