--- a/docker/biosdk/tech5/Dockerfile-authentication-otp-service-tech5-softhsm
+++ b/docker/biosdk/tech5/Dockerfile-authentication-otp-service-tech5-softhsm
@@ -24,9 +24,6 @@ ENV spring_config_label_env=${spring_config_label}
 # environment variable to pass spring configuration url, at docker runtime
 ENV spring_config_url_env=${spring_config_url}
 
-# environment variable for external jar dependencies
-#ENV LD_LIBRARY_PATH=/so-files
-
 # environment variable to pass glowroot, at docker runtime
 ENV is_glowroot_env=${is_glowroot}
 
@@ -62,7 +59,7 @@ CMD if [ "$is_glowroot_env" = "present" ]; then \
     else \
     cd /opt/Tech5 && java -jar -Djava.security.debug=sunpkcs11 -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path=commons-codec-1.9.jar,kernel-cbeffutil-api-0.12.18.jar,t5-finger-iris-mosip-auth-v1.2.jar,ABISTech5FaceSDKAdapter_v1.5.jar,tech5-sdk-docker-v1.0.jar -Dfile.encoding="UTF-8" /opt/Tech5/${current_module_env}.jar ; \
     fi
-#CMD ["java", "-Dloader.path=/tech5-sdk-v1.5.1.jar,/ABISTech5FaceSDKAdapter_v2.jar,/t5-finger-iris-mosip-auth-v1.2.jar", "-jar","-Dspring.cloud.config.label=${spring_config_label_env}","-Dspring.profiles.active=${active_profile_env}","-Dspring.cloud.config.uri=${spring_config_url_env}", "/${current_module_env}.jar"]
 
-# Example Docker run command for authentication-otp-service-tech5-softhsm:1.0.9-SNAPSHOT
+
+# Example Docker run command:
 # sudo docker run --rm -d -e artifactory_url_env="http://13.71.87.138:8040" -e spring_config_label_env="1.0.9" -e active_profile_env="extint" -e spring_config_url_env="http://104.211.212.28:51000" -p 8090:8090 -v /softhsm:/softhsm/var/lib/softhsm/ authentication-otp-service-tech5-softhsm:1.0.9-SNAPSHOT
