--- a/docker/biosdk/tech5/Dockerfile-authentication-internal-service-tech5-softhsmclient
+++ b/docker/biosdk/tech5/Dockerfile-authentication-internal-service-tech5-softhsmclient
@@ -18,17 +18,13 @@ ARG is_glowroot
 # can be passed during Docker build as build time environment for artifactory URL
 ARG artifactory_url
 
+ARG softhsm_client_zip=client-centos.zip
+
 # environment variable to pass active profile such as DEV, QA etc at docker runtime
 ENV active_profile_env=${active_profile}
 
 # environment variable to pass github branch to pickup configuration from, at docker runtime
 ENV spring_config_label_env=${spring_config_label}
-
-ENV code_branch_env=${code_branch}
-
-ENV git_user_env=${git_user}
-
-ENV code_repo_env=${code_repo}
 
 # environment variable to pass spring configuration url, at docker runtime
 ENV spring_config_url_env=${spring_config_url}
@@ -38,6 +34,10 @@ ENV is_glowroot_env=${is_glowroot}
 
 # environment variable to pass artifactory url, at docker runtime
 ENV artifactory_url_env=${artifactory_url}
+
+ENV softhsm_client_zip_env=${softhsm_client_zip}
+
+ENV work_dir_env=/opt/Tech5
 
 ENV current_module_env=authentication-internal-service
 
