--- a/docker/biosdk/tech5/Dockerfile-authentication-otp-service-softhsmclient
+++ b/docker/biosdk/tech5/Dockerfile-authentication-otp-service-softhsmclient
@@ -12,6 +12,8 @@ ARG active_profile
 # can be passed during Docker build as build time environment for config server URL 
 ARG spring_config_url
 
+ARG softhsm_client_zip=client-centos.zip
+
 # can be passed during Docker build as build time environment for glowroot 
 ARG is_glowroot
 
@@ -23,12 +25,6 @@ ENV active_profile_env=${active_profile}
 
 # environment variable to pass github branch to pickup configuration from, at docker runtime
 ENV spring_config_label_env=${spring_config_label}
-
-ENV code_branch_env=${code_branch}
-
-ENV git_user_env=${git_user}
-
-ENV code_repo_env=${code_repo}
 
 # environment variable to pass spring configuration url, at docker runtime
 ENV spring_config_url_env=${spring_config_url}
@@ -42,7 +38,11 @@ ENV is_glowroot_env=${is_glowroot}
 # environment variable to pass artifactory url, at docker runtime
 ENV artifactory_url_env=${artifactory_url}
 
-ENV current_module_env=authentication-otp-service
+ENV softhsm_client_zip_env=${softhsm_client_zip}
+
+ENV work_dir_env=/
+
+ENV current_module_env=authentication-service
 
 ADD configure_start.sh configure_start.sh
 
