--- a/authentication/authentication-kyc-service/pom.xml
+++ b/authentication/authentication-kyc-service/pom.xml
@@ -58,6 +58,12 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<version>${io.micrometer.prometheus.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>${mockito.version}</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 	<build>
