--- a/authentication/authentication-otp-service/pom.xml
+++ b/authentication/authentication-otp-service/pom.xml
@@ -53,6 +53,12 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<version>${io.micrometer.prometheus.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>${mockito.version}</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 	<build>
