Corrected auth-softhsm-build

--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -370,7 +370,7 @@ jobs:
           docker tag $SERVICE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
   docker-authentication-otp-service-softhsm:
-    needs: docker-java8-softhsm-base
+    needs: build
 
     runs-on: ubuntu-latest
     env:
@@ -421,7 +421,7 @@ jobs:
           docker tag $SERVICE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
   docker-authentication-internal-service-softhsm:
-    needs: docker-java8-softhsm-base
+    needs: build
 
     runs-on: ubuntu-latest
     env:
@@ -472,7 +472,7 @@ jobs:
           docker tag $SERVICE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
   docker-authentication-kyc-service-softhsm:
-    needs: docker-java8-softhsm-base
+    needs: build
 
     runs-on: ubuntu-latest
     env:
@@ -523,7 +523,7 @@ jobs:
           docker tag $SERVICE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
   docker-authentication-service-softhsm:
-    needs: docker-java8-softhsm-base
+    needs: build
 
     runs-on: ubuntu-latest
     env:
