--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -375,7 +375,7 @@ jobs:
           docker tag $SERVICE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
   docker-authentication-otp-service-softhsm:
-    needs: docker-java8-softhsm-base
+    needs: build
 
     runs-on: ubuntu-latest
     env:
@@ -426,7 +426,7 @@ jobs:
           docker tag $SERVICE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
   docker-authentication-internal-service-softhsm:
-    needs: docker-java8-softhsm-base
+    needs: build
 
     runs-on: ubuntu-latest
     env:
@@ -477,7 +477,7 @@ jobs:
           docker tag $SERVICE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
   docker-authentication-kyc-service-softhsm:
-    needs: docker-java8-softhsm-base
+    needs: build
 
     runs-on: ubuntu-latest
     env:
@@ -528,7 +528,7 @@ jobs:
           docker tag $SERVICE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
   docker-authentication-service-softhsm:
-    needs: docker-java8-softhsm-base
+    needs: build
 
     runs-on: ubuntu-latest
     env:
