lombok version updated

--- a/authentication/authentication-internal-service/pom.xml
+++ b/authentication/authentication-internal-service/pom.xml
@@ -80,6 +80,11 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<version>${io.micrometer.prometheus.version}</version>
 		</dependency>
+		<dependency>
+	  		<groupId>org.projectlombok</groupId>
+	  		<artifactId>lombok</artifactId>
+	  		<version>${lombok.version}</version>
+  		</dependency>
 	</dependencies>
 	
 	<build>
