Migration to Java 11 (#144)
* migration to java11

* updated to Java11

* provider invoking code updated

* pom file updated

* PKCS11 provider code updated

* maven compiler plugin added

* lombok version updated

Co-authored-by: Nagarjuna <Nagarjuna@host.docker.internal>

--- a/authentication/authentication-internal-service/pom.xml
+++ b/authentication/authentication-internal-service/pom.xml
@@ -80,6 +80,11 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<version>${io.micrometer.prometheus.version}</version>
 		</dependency>
+		<dependency>
+	  		<groupId>org.projectlombok</groupId>
+	  		<artifactId>lombok</artifactId>
+	  		<version>${lombok.version}</version>
+  		</dependency>
 	</dependencies>
 	
 	<build>
@@ -100,6 +105,15 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.version}</version>
+				<configuration>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
