[MOSIP-8294] updated idgenerator pom

--- a/authentication/idgenerator-tokenid/pom.xml
+++ b/authentication/idgenerator-tokenid/pom.xml
@@ -8,7 +8,7 @@
 	    <artifactId>authentication-parent</artifactId>
 		<version>1.0.11-SNAPSHOT</version>
 	</parent>
-	<artifactId>idgenerator-tokenid</artifactId>
+	<artifactId>authentication-idgenerator-tokenid</artifactId>
 	<version>1.0.8-SNAPSHOT</version>
 	<properties>
 		<kernel.core.version>1.0.6</kernel.core.version>
